Fixes: NB#274279 - 'Current state: Charging only' (§qtn_usb_charging§) alignment and font are incorrect in the USB mode selection dialog
Bug: NB#274279 - 'Current state: Charging only' (§qtn_usb_charging§) alignment and font are incorrect in the USB mode selection dialog
RevBy: TrustMe

--- a/themes/style/default.css
+++ b/themes/style/default.css
@@ -12,3 +12,8 @@ MWindowStyle {
     x11-startup-pixmap: ;
     startup-fill-color: black;
 }
+
+#CommonTextFrameInverted {
+    margin-left: 0;
+    margin-right: 0;
+}
